fixed margin of social media on tablet screens

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -46,7 +46,7 @@
 }
 
 .short-introduction {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   padding: 5%;
 }
 
@@ -55,7 +55,7 @@
 }
 
 .social-media a {
-  margin: 50% 0;
+  margin: 30% 0 0;
   padding: 2%;
 }
 
